--- a/src/components/app-header/AppHeader.module.css
+++ b/src/components/app-header/AppHeader.module.css
@@ -7,12 +7,14 @@
     0px 0px 1px rgba(0, 0, 0, 0.04);
   display: flex;
   align-items: center;
+  position: fixed;
+  z-index: 10;
 }
 
 .nav {
   width: 100%;
   min-height: inherit;
-  max-width: 1240px;
+  max-width: 1280px;
   margin: 0 auto;
   box-sizing: border-box;
 }
