--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,9 @@
 @import "./vendors/normalize.css";
 @import "./fonts/stylesheet.css";
 
+
 body #root {
-  background-color: #1c1c21;
+  background-color: #131316;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
@@ -14,4 +15,6 @@ body #root {
   min-height: 100vh;
   align-items: center;
   color: #f2f2f3;
+  max-height: 100vh;
+  overflow-y: hidden;
 }
