feat: add propTypes for components BurgerIngredients and BurgerConstructor

--- a/src/components/burger-constructor/BurgerConstructor.module.css
+++ b/src/components/burger-constructor/BurgerConstructor.module.css
@@ -81,6 +81,6 @@
 .listScrolle {
   display: grid;
   row-gap: 16px;
-  max-height: 190px;
+  max-height: calc(100vh - 40px - 64px - 100px - 88px - 80px - 16px - 80px - 34px);
   overflow-y: auto;
 }
