--- a/src/components/burger-constructor/BurgerConstructor.module.css
+++ b/src/components/burger-constructor/BurgerConstructor.module.css
@@ -1,5 +1,5 @@
 .container {
-  padding: 100px 16px 8px;
+  padding: 100px 0 8px 16px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -15,6 +15,7 @@
 
 .listItemTop {
   margin-left: 32px;
+  margin-right: 16px;
   border-radius: 50px;
   padding: 16px 32px 16px 24px;
   border-radius: 88px 88px 40px 40px;
@@ -40,6 +41,7 @@
   composes: listItemTop;
   margin-left: 0;
   border-radius: 40px;
+  margin-right: 0;
 }
 
 .totalPriceContainer {
@@ -82,5 +84,5 @@
   display: grid;
   row-gap: 16px;
   max-height: calc(100vh - 40px - 64px - 100px - 88px - 80px - 16px - 80px - 34px);
-  overflow-y: auto;
+  overflow-y: scroll;
 }
