--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,9 @@
 @import "./vendors/normalize.css";
 @import "./fonts/stylesheet.css";
 
+body {
+  overflow-y: hidden;
+}
 
 body #root {
   background-color: #131316;
@@ -13,8 +16,6 @@ body #root {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
-  
   align-items: center;
   color: #f2f2f3;
-  
 }
