--- a/src/components/popup-burger-ingredients/PopupBurgerIngredients.module.css
+++ b/src/components/popup-burger-ingredients/PopupBurgerIngredients.module.css
@@ -90,6 +90,13 @@
   opacity: 0.8;
 }
 
+.imgContainer {
+  min-height: 240px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .img {
   padding: 0 20px;
   max-width: 520px;
