--- a/src/components/burger-constructor/BurgerConstructor.module.css
+++ b/src/components/burger-constructor/BurgerConstructor.module.css
@@ -82,7 +82,22 @@
 
 .listScrolle {
   display: grid;
+  padding-right: 8px;
   row-gap: 16px;
   max-height: calc(100vh - 40px - 64px - 100px - 88px - 80px - 16px - 80px - 34px);
   overflow-y: scroll;
+  scrollbar-width: thin;          /* "auto" или "thin"  */
+  scrollbar-color: #8585AD #1C1C21;
+}
+
+.listScrolle::-webkit-scrollbar {
+  width: 8px;
+}
+
+.listScrolle::-webkit-scrollbar-track {
+  background: #1C1C21; 
+}
+ 
+.listScrolle::-webkit-scrollbar-thumb {
+  background: #8585AD; 
 }
