--- a/src/index.css
+++ b/src/index.css
@@ -18,4 +18,16 @@ body #root {
   min-height: 100vh;
   align-items: center;
   color: #f2f2f3;
+  opacity: 0;
+  transition: all 1s;
+}
+
+body #preload-modal-root {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1000;
+  pointer-events: none;
 }
