--- a/src/components/modal/Modal.module.css
+++ b/src/components/modal/Modal.module.css
@@ -1,47 +1,33 @@
-.popup {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 100;
-  background-color: rgba(0, 0, 0, 0.6);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  opacity: 0;
-  pointer-events: none;
-  transition: all 0.2s;
-}
-
-.popup_active {
-  opacity: 1;
-  pointer-events: auto;
-}
-
-.popup__inner {
+.modal {
   width: 100%;
   max-width: 720px;
   background-color: #131316;
   border-radius: 40px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
   border: 1px solid rgba(76, 76, 255, 0.2);
   box-shadow: 0px 24px 32px rgba(0, 0, 0, 0.04),
     0px 16px 24px rgba(0, 0, 0, 0.04), 0px 4px 8px rgba(0, 0, 0, 0.04),
     0px 0px 1px rgba(0, 0, 0, 0.04);
 }
 
-.titleContainer {
+.container {
   width: 100%;
   box-sizing: border-box;
+  padding: 40px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.titleContainer {
+  width: 100%;
   color: #f2f2f3;
   display: grid;
   grid-template-columns: repeat(2, max-content);
-  grid-template-rows: 60px;
   align-items: center;
   justify-content: space-between;
+  grid-template-rows: 64px;
 }
 
 .button {
@@ -88,41 +74,4 @@
 
 .button:hover::after {
   opacity: 0.8;
-}
-
-.imgContainer {
-  min-height: 240px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.img {
-  padding: 0 20px;
-  max-width: 520px;
-  margin: 0 auto;
-}
-
-.list {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  width: 100%;
-  max-width: 520px;
-  column-gap: 20px;
-  padding: 0;
-  list-style: none;
-  margin-bottom: 40px;
-  margin-top: 0;
-}
-
-.listItem {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  color: #8585ad;
-}
-
-.listItem__text {
-  margin: 0;
-  padding-bottom: 8px;
 }
