--- a/src/components/modal/Modal.module.css
+++ b/src/components/modal/Modal.module.css
@@ -1,7 +1,7 @@
 .modal {
   width: 100%;
   max-width: 720px;
-  background-color: #131316;
+  background-color: #1c1c21;
   border-radius: 40px;
   border: 1px solid rgba(76, 76, 255, 0.2);
   box-shadow: 0px 24px 32px rgba(0, 0, 0, 0.04),
