--- a/src/components/order-details/OrderDetails.module.css
+++ b/src/components/order-details/OrderDetails.module.css
@@ -12,6 +12,28 @@
 .checked {
   width: 110px;
   height: 110px;
-  background-image: url("https://s3-alpha-sig.figma.com/img/4683/db1e/086c197d79d516cb9b72c157512f8436?Expires=1623024000&Signature=VD4vzC2jKSWYXG7IdtPbLKk0wOCqtvTyWbr-7P~5u0BcJ2bOUKEl1XgvOVRnyKkbVwsdQE1uJ4ZyQxf2xeLquuiz-~0iarc2jnttBdDPm0KYk6nVypXpBVE8PH4JBq-qWuILgYu4nar1FHdbfUR8J2zEM5XbUWkhKh6Z9wguke2pgEKT6CVmgHG32dz5WU2mgSR9ka2IQIkS~VN1Wfk51Bh5QG3c2oAvhbHrIBjSwSbhTvDidQLLNPTl2blrgPKzC4-rw2kYUoPm6qflx9A6-mAs2uas6WVJWphNTy6K1uUElju~4--vALmu-aSr9H7EmUI07QayaUVrr64GmCDBMg__&Key-Pair-Id=APKAINTVSUGEWH5XD5UA");
+  background-image: url(../../images/checked.gif);
   background-size: cover;
+  background-position: center;
+}
+
+.checked_transparent {
+  width: 110px;
+  height: 110px;
+  background-image: none;
+}
+
+.text_transparent {
+  color: transparent;
+}
+
+.imgContainer {
+  height: 119px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.error {
+  
 }
