--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import "./vendors/normalize.css";
+@import "../node_modules/normalize.css/normalize.css";
 @import "./fonts/stylesheet.css";
 
 body {
