--- a/src/components/burger-constructor/BurgerConstructor.module.css
+++ b/src/components/burger-constructor/BurgerConstructor.module.css
@@ -1,8 +1,29 @@
 .container {
-  padding: 100px 0 8px 16px;
+  padding: 95px 0 13px 6px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+}
+
+.containerInner {
+  flex-basis: 100%;
+  padding: 5px;
+  transition: all 0.2s;
+}
+
+.containerInner_canDrop {
+  box-shadow: 0px 0px 16px rgba(51, 51, 255, 0.25),
+    0px 0px 8px rgba(51, 51, 255, 0.25), 0px 4px 32px rgba(51, 51, 255, 0.5);
+}
+
+.containerInner_isOver {
+  box-shadow: 0px 0px 16px rgba(117, 250, 129, 0.25),
+    0px 0px 8px rgba(117, 250, 129, 0.25), 0px 4px 32px rgba(117, 250, 129, 0.5);
+}
+
+.defaultText {
+  text-align: center;
+  margin: 0;
 }
 
 .list {
@@ -15,31 +36,10 @@
 
 .totalPriceContainer {
   margin-top: 40px;
+  margin-right: 5px;
   display: grid;
   grid-template-columns: repeat(2, max-content);
   column-gap: 40px;
   justify-content: end;
   align-items: center;
-}
-
-.listScrolle {
-  display: grid;
-  padding-right: 8px;
-  row-gap: 16px;
-  max-height: calc(100vh - 40px - 64px - 100px - 88px - 80px - 16px - 80px - 34px);
-  overflow-y: scroll;
-  scrollbar-width: thin;          /* "auto" или "thin"  */
-  scrollbar-color: #8585AD #1C1C21;
-}
-
-.listScrolle::-webkit-scrollbar {
-  width: 8px;
-}
-
-.listScrolle::-webkit-scrollbar-track {
-  background: #1C1C21; 
-}
- 
-.listScrolle::-webkit-scrollbar-thumb {
-  background: #8585AD; 
 }
