--- a/src/components/profile/Profile.module.css
+++ b/src/components/profile/Profile.module.css
@@ -1,11 +1,12 @@
 .profile {
-  margin-top: calc(120px + 88px);
+  margin-top: calc(40px + 88px);
   width: 100%;
   max-width: 1240px;
   display: flex;
 }
 
 .navContainer {
+  margin-top: 80px;
   max-width: 320px;
   width: 100%;
 }
@@ -39,6 +40,7 @@
 }
 
 .form {
+  margin-top: 80px;
   margin-left: 60px;
   max-width: 480px;
   width: 100%;
@@ -60,4 +62,15 @@
 
 .error_active {
   display: block;
+}
+
+.button {
+  border: none;
+  background-color: transparent;
+  transition: all 0.2s;
+  cursor: pointer;
+}
+
+.button:hover {
+  color: #f2f2f3;
 }
