--- a/src/components/profile-orders/ProfileOrders.module.css
+++ b/src/components/profile-orders/ProfileOrders.module.css
@@ -7,6 +7,7 @@
 }
 
 .innerContainer {
+  margin-top: 128px;
   margin-left: 60px;
   overflow-y: scroll;
   max-height: calc(100vh - 40px - 88px);
@@ -80,6 +81,7 @@
   align-items: center;
   justify-content: center;
   border-radius: 50%;
+  position: relative;
 }
 
 .listItemImage {
@@ -109,5 +111,12 @@
   margin: 0 0 8px 0;
   display: block;
   text-align: left;
+}
+
+.counter {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%)
 }
 
