--- a/src/components/sign-up/SignUp.module.css
+++ b/src/components/sign-up/SignUp.module.css
@@ -1,7 +1,12 @@
 .signIn {
   width: 100%;
   max-width: 480px;
-  margin-top: calc(88px + 40px);
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  transform: translateY(44px);
 }
 
 .inputContainer {
